2006-07-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_get_eid) : added
	* examples/simple/igraph_get_eid.c : added

2006-07-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_pajek) : reset line number
	* src/foreign-pajek-lexer.l (igraph_i_pajek_reset_scanner) : added
	* src/foreign-pajek-parser.y (igraph_pajek_yyerror) : updated 
	to produce better error message and reset flex scanner

	* src/foreign.c (igraph_read_graph_lgl, igraph_read_graph_ncol) :
	reset line number
	* src/foreign-lgl-lexer.l (igraph_i_lgl_reset_scanner) : added
	* src/foreign-lgl-parser.y (igraph_lgl_yyerror) : updated to
	produce better error message and reset flex scanner
	* src/foreign-ncol-lexer.l (igraph_i_ncol_reset_scanner) : added
	* src/foreign-ncol-parser.y (igraph_ncol_yyerror) : updated to
	produce better error message and reset flex scanner

	* src/foreign.c (igraph_read_graph_ncol, igraph_read_graph_lgl)
	(igraph_read_graph_pajek) : handle end of file better
	* src/foreign-lgl-lexer.l : added <<EOF>> rule
	* src/foreign-pajek-lexer.l : added <<EOF>> rule
	* src/foreign-ncol-lexer.l : added <<EOF>> rule

2006-07-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-pajek-parser.y : a bit rewritten to handle attributes
	* src/foreign.c (igraph_read_graph_pajek) : updated to handle 
	attributes
	* examples/simple/foreign.c : updated, attributes parameter added

	* src/attributes.h (igraph_i_attribute_record_t) : value changed to
	const pointer
	* src/foreign.c (igraph_read_graph_ncol, igraph_read_graph_lgl) :
	updated

2006-07-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.h (igraph_hashtable_t) : added
	* src/igraph_hashtable.c (igraph_hashtable_init)
	(igraph_hashtable_destroy, igraph_hashtable_addset)
	(igraph_hashtable_get, igraph_hashtable_reset) : added
	* examples/simple/igraph_hashtable.c : added

	* src/igraph_hashtable.c (igraph_hashtable_getkeys) : added
